<resources>
    <string name="app_name">e-commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="login_with_google">login with Google</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="icon_profile">icon Profile</string>
    <string name="homepage">Homepage</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_image">product image</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product price</string>
    <string name="purchase">Purchase</string>
    <string name="decrement_product_count_button">Decrement Product Count Button</string>
    <string name="increment_product_count_button">Increment Product Count Button</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="favorite_product_image">Favorite Product Image</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="search_product">Search Product</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="blood_group">Blood Group</string>
    <string name="address">Address</string>
    <string name="address_info">Address Info</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="user_image">User Image</string>
    <string name="personal_info">Personal Info</string>
    <string name="title_home">Homepage</string>
    <string name="title_categories">Categories</string>
    <string name="title_detail">Detail</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search Product</string>
</resources>