<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/homepage" />
        <item
            android:id="@+id/categoriesFragment"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/search_product" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_like"
        android:title="@string/favorites" />
    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/orders" />
    <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/ic_logout"
        android:title= "@string/logout" />
    </group>
</menu>