<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/reset_password"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <TextView
        android:id="@+id/tvResetPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPassword"/>

    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tvResetPasswordText"
        app:layout_constraintStart_toStartOf="@+id/tvResetPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPasswordText"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etResetPassword"
            app:layout_constraintStart_toStartOf="@+id/etResetPassword"
            app:layout_constraintTop_toBottomOf="@+id/etResetPassword">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#E3E0E0"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:cornerRadius="6dp"
                android:textAllCaps="false"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#2196F3"
                android:text="@string/send"
                app:cornerRadius="6dp"
                android:textAllCaps="false"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>